@@ -1329,7 +1329,7 @@
 					  </child>
 					</widget>
 					<packing>
-					  <property name="padding">0</property>
+					  <property name="padding">1</property>
 					  <property name="expand">True</property>
 					  <property name="fill">True</property>
 					</packing>
@@ -1359,8 +1359,8 @@
 						  <property name="selectable">False</property>
 						  <property name="xalign">0</property>
 						  <property name="yalign">0.5</property>
-						  <property name="xpad">0</property>
-						  <property name="ypad">0</property>
+						  <property name="xpad">5</property>
+						  <property name="ypad">1</property>
 						  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 						  <property name="width_chars">-1</property>
 						  <property name="single_line_mode">True</property>
@@ -1374,9 +1374,44 @@
 					      <property name="fill">False</property>
 					    </packing>
 					  </child>
+
+					  <child>
+					    <widget class="GtkEventBox" id="query_db_eventbox">
+					      <property name="visible">True</property>
+					      <property name="tooltip" translatable="yes">click here to jump to the selected host/database</property>
+					      <property name="visible_window">True</property>
+					      <property name="above_child">False</property>
+					      <signal name="button_press_event" handler="on_query_db_eventbox_button_press_event" last_modification_time="Sun, 13 Aug 2006 16:14:48 GMT"/>
+
+					      <child>
+						<widget class="GtkLabel" id="query_db_label">
+						  <property name="visible">True</property>
+						  <property name="label" translatable="yes"></property>
+						  <property name="use_underline">False</property>
+						  <property name="use_markup">False</property>
+						  <property name="justify">GTK_JUSTIFY_LEFT</property>
+						  <property name="wrap">False</property>
+						  <property name="selectable">False</property>
+						  <property name="xalign">0</property>
+						  <property name="yalign">0.5</property>
+						  <property name="xpad">5</property>
+						  <property name="ypad">1</property>
+						  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+						  <property name="width_chars">-1</property>
+						  <property name="single_line_mode">False</property>
+						  <property name="angle">0</property>
+						</widget>
+					      </child>
+					    </widget>
+					    <packing>
+					      <property name="padding">0</property>
+					      <property name="expand">False</property>
+					      <property name="fill">False</property>
+					    </packing>
+					  </child>
 					</widget>
 					<packing>
-					  <property name="padding">0</property>
+					  <property name="padding">1</property>
 					  <property name="expand">False</property>
 					  <property name="fill">True</property>
 					</packing>
